Added Image and fix for Agege

--- a/css/agbado.css
+++ b/css/agbado.css
@@ -43,7 +43,7 @@ body {
 /* *********************Hero section*********** */
 
 .img-wrapper {
-    background-image: url("/Images/Agege.png");
+    background-image: url("/Images/Agbado.png");
     background-size: cover;
     background-position: 50%;
     height: 100vh;
