--- a/css/agege.css
+++ b/css/agege.css
@@ -127,17 +127,13 @@ th {
     border: 1px solid black;
 }
 
-button {
-    border: none;
-    background-color: white;
-    height: 2rem;
-    width: 4rem;
-    color: #473c33;
-}
-
-#LG0570 {
+/*************FILL IN DETAILS ABOVE HERE*********************/
+#LG0121 {
     background-color: #abc270;
 }
+
+
+/************FILL ONLY ABOVE HERE****************************/
 
 footer {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -149,6 +145,28 @@ footer {
 
 .footer>p {
     margin-top: 1rem;
+}
+
+.back {
+    text-align: center;
+    padding: 1rem;
+    text-decoration: none;
+}
+
+.back a {
+    text-decoration: none;
+}
+
+.arrow {
+    margin: 3px;
+}
+
+@media screen and (max-width: 450px) {
+    table,th,td  {
+        padding: 4px;
+        margin: 0;
+    }
+
 }
 
 @media screen and (min-width: 800px) {
