--- a/css/agege.css
+++ b/css/agege.css
@@ -43,7 +43,7 @@ body {
 /* *********************Hero section*********** */
 
 .img-wrapper {
-    background-image: url("/Images/Agege.png");
+    background-image: url("https://images2.imgbox.com/cd/ee/9ZyrWApc_o.png");
     background-size: cover;
     background-position: 50%;
     height: 100vh;
