--- a/css/iju.css
+++ b/css/iju.css
@@ -43,7 +43,7 @@ body {
 /* *********************Hero section*********** */
 
 .img-wrapper {
-    background-image: url("/Images/iju.png");
+    background-image: url("https://images2.imgbox.com/bf/63/kWQfIGyI_o.png");
     background-size: cover;
     background-position: 50%;
     height: 100vh;
