--- a/css/Ikeja-B.css
+++ b/css/Ikeja-B.css
@@ -43,7 +43,7 @@ body {
 /* *********************Hero section*********** */
 
 .img-wrapper {
-    background-image: url("https://images2.imgbox.com/4c/84/83ncqVRy_o.png");
+    background-image: url("https://images2.imgbox.com/a2/ff/NDGHVab9_o.png");
     background-size: cover;
     background-position: 50%;
     height: 100vh;
