--- a/css/egbeda.css
+++ b/css/egbeda.css
@@ -43,7 +43,7 @@ body {
 /* *********************Hero section*********** */
 
 .img-wrapper {
-    background-image: url("https://images2.imgbox.com/4c/84/83ncqVRy_o.png");
+    background-image: url("/images/Egbeda.png");
     background-size: cover;
     background-position: 50%;
     height: 100vh;
