--- a/css/agbado.css
+++ b/css/agbado.css
@@ -43,7 +43,7 @@ body {
 /* *********************Hero section*********** */
 
 .img-wrapper {
-    background-image: url("https://images2.imgbox.com/80/5e/lBUFgG0N_o.png");
+    background-image: url("/images/Agbado.png");
     background-size: cover;
     background-position: 50%;
     height: 100vh;
