--- a/css/ayobo.css
+++ b/css/ayobo.css
@@ -43,7 +43,7 @@ body {
 /* *********************Hero section*********** */
 
 .img-wrapper {
-    background-image: url("/images/Ayobo.png");
+    background-image: url("../images/Ayobo.png");
     background-size: cover;
     background-position: 50%;
     height: 100vh;
